[IMPL] cmake: build script enhancements
1. Replaced auto-constructed list of source files with explicit list
2. Fixed indenting and spacing
3. Added build types Gtest and GtestDebug for unit testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,34 +7,143 @@ set(CMAKE_MODULE_PATH
     ${CMAKE_MODULE_PATH}
 )
 
-file(GLOB_RECURSE SOURCE_arrayOperations      "./External/ArrayOperations/*.cpp")
-file(GLOB_RECURSE SOURCE_gaussString          "./External/GaussString/*.cpp")
-file(GLOB_RECURSE SOURCE_lsm                  "./External/LSM/*.cpp")
-file(GLOB_RECURSE SOURCE_vector3d             "./External/Vector3d/*.cpp")
-file(GLOB_RECURSE SOURCE_pcl                  "./Source/*.cpp")
+set (SOURCE_arrayOperations
+	External/ArrayOperations/array_operations.cpp
+)
 
-file(GLOB_RECURSE SOURCE_tests                "./Tests/*.cpp")
+set (SOURCE_gaussString
+	External/GaussString/Gauss_string.cpp
+	External/GaussString/Gauss_test.cpp
+)
 
-set (HEADERS_all "")
-list (APPEND HEADERS_all ${HEADERS_arrayOperations})
-list (APPEND HEADERS_all ${HEADERS_gaussString})
-list (APPEND HEADERS_all ${HEADERS_lsm})
-list (APPEND HEADERS_all ${HEADERS_Vector3d})
-list (APPEND HEADERS_all ${HEADERS_pcl})
+set (SOURCE_lsm
+	External/LSM/LeastSquaresMethod.cpp
+)
 
-set (INCLUDE_DIRS_all "")
-foreach (_headerFile ${HEADERS_all})
-    get_filename_component(_dir ${_headerFile} PATH)
-    list (APPEND INCLUDE_DIRS_all ${_dir})
-endforeach()
-list(REMOVE_DUPLICATES INCLUDE_DIRS_all)
+set (SOURCE_vector3d
+	External/Vector3d/Vector3d.cpp
+)
 
-list (APPEND INCLUDE_DIRS_all "${CMAKE_SOURCE_DIR}/Source")
-list (APPEND INCLUDE_DIRS_all "${CMAKE_SOURCE_DIR}/External/ArrayOperations")
-list (APPEND INCLUDE_DIRS_all "${CMAKE_SOURCE_DIR}/External/GaussString")
-list (APPEND INCLUDE_DIRS_all "${CMAKE_SOURCE_DIR}/External/LSM")
-list (APPEND INCLUDE_DIRS_all "${CMAKE_SOURCE_DIR}/External/Vector3d")
-list (APPEND INCLUDE_DIRS_all "/usr/include/eigen3")
+set (SOURCE_pcl
+	Source/Analyzers/Clusterizer/Clusterizer.cpp
+	Source/Analyzers/Clusterizer/ClusterNorm/ClusterNorm.cpp
+	Source/Analyzers/Clusterizer/MatrixDistNorm/MatrixDistNorm.cpp
+	Source/Analyzers/Clusterizer/SortedSetOfPairs/SortedSetOfPairs.cpp
+	Source/Analyzers/Clusterizer/SpherePoint/SpherePoint.cpp
+	Source/Analyzers/Clusterizer/TreeClusterNormNode/TreeClusterNormNode.cpp
+	Source/Analyzers/Clusterizer/TreeClusterNorm/TreeClusterNorm.cpp
+	Source/Analyzers/PAnalyzer/PAnalyzer.cpp
+	Source/Analyzers/ShadowContourClusterizer/ShadowContourClusterizer.cpp
+	Source/Analyzers/SizeCalculator/SizeCalculator.cpp
+	Source/Analyzers/SizeCalculator/SortedDouble/SortedDouble.cpp
+	Source/Correctors/Coalescer/Coalescer.cpp
+	Source/Correctors/EdgeReducer/EdgeReducer.cpp
+	Source/Correctors/GlobalShadowCorrector/GlobalShadowCorrector.cpp
+	Source/Correctors/GlobalShadowCorrector/GlobalShadowCorrector_derivateTest.cpp
+	Source/Correctors/GlobalShadowCorrector/GlobalShadowCorrector_preprocess.cpp
+	Source/Correctors/GlobalShadowCorrector/GSAssociator/GSAssociator.cpp
+	Source/Correctors/Intersector/EdgeList/EdgeList.cpp
+	Source/Correctors/Intersector/EdgeList/EdgeList_intersection.cpp
+	Source/Correctors/Intersector/EdgeList/EdgeList_io.cpp
+	Source/Correctors/Intersector/EdgeSetIntersected/EdgeSetIntersected.cpp
+	Source/Correctors/Intersector/EdgeSetIntersected/EdgeSetIntersected_intersection.cpp
+	Source/Correctors/Intersector/EdgeSetIntersected/EdgeSetIntersected_io.cpp
+	Source/Correctors/Intersector/FacetIntersector.cpp
+	Source/Correctors/Intersector/FutureFacet/FutureFacet.cpp
+	Source/Correctors/Intersector/FutureFacet/FutureFacet_intersection.cpp
+	Source/Correctors/Intersector/FutureFacet/FutureFacet_io.cpp
+	Source/Correctors/Intersector/Intersector.cpp
+	Source/Correctors/PCorrector/PCorrector.cpp
+	Source/Correctors/PointShifterLinear/PointShifterLinear.cpp
+	Source/Correctors/PointShifter/PointShifter.cpp
+	Source/Correctors/PointShifterWeighted/PointShifterWeighted.cpp
+	Source/Correctors/VertexGrouper/VertexGrouper.cpp
+	Source/DataConstructors/EdgeConstructor/EdgeConstructor.cpp
+	Source/DataConstructors/PDataConstructor/PDataConstructor.cpp
+	Source/DataConstructors/ShadowContourConstructor/ShadowContourConstructor.cpp
+	#	Source/DataConstructors/SupportFunctionDataConstructor/SupportFunctionDataConstructor.cpp
+	Source/DataConstructors/SupportFunctionDataConstructor/SupportFunctionDataItemExtractorByPlane.cpp
+	Source/DataConstructors/SupportFunctionDataConstructor/SupportFunctionDataItemExtractor.cpp
+	Source/DataContainers/EdgeData/EdgeContourAssociation/EdgeContourAssociation.cpp
+	Source/DataContainers/EdgeData/EdgeData.cpp
+	Source/DataContainers/EdgeData/Edge/Edge.cpp
+	Source/DataContainers/EdgeData/Edge/Edge_io.cpp
+	Source/DataContainers/PData/PData.cpp
+	Source/DataContainers/ShadowContourData/SContour/SContour.cpp
+	Source/DataContainers/ShadowContourData/SContour/SContour_io.cpp
+	Source/DataContainers/ShadowContourData/ShadowContourData.cpp
+	Source/DataContainers/ShadowContourData/SideOfContour/SideOfContour.cpp
+	Source/DataContainers/ShadowContourData/SideOfContour/SideOfContour_io.cpp
+	Source/DataContainers/SupportFunctionData/SupportFunctionData.cpp
+	Source/DataContainers/SupportFunctionData/SupportFunctionDataItem.cpp
+	Source/DataContainers/SupportFunctionData/SupportFunctionDataItemInfo.cpp
+	Source/DataContainers/SupportFunctionEstimationData/SupportFunctionEstimationData.cpp
+	Source/Dumpers/GraphDumperGEXF/GraphDumperGEXF.cpp
+	Source/Polyhedron/Facet/Facet_area.cpp
+	Source/Polyhedron/Facet/Facet.cpp
+	Source/Polyhedron/Facet/Facet_inertia.cpp
+	Source/Polyhedron/Facet/Facet_io.cpp
+	Source/Polyhedron/Facet/Facet_preprocess.cpp
+	Source/Polyhedron/Facet/Facet_test.cpp
+	Source/Polyhedron/Facet/Facet_verification.cpp
+	Source/Polyhedron/Polyhedron_clusterize.cpp
+	Source/Polyhedron/Polyhedron_coalesce_facets.cpp
+	Source/Polyhedron/Polyhedron_correction.cpp
+	Source/Polyhedron/Polyhedron.cpp
+	Source/Polyhedron/Polyhedron_group_vertices.cpp
+	Source/Polyhedron/Polyhedron_intersection.cpp
+	Source/Polyhedron/Polyhedron_io.cpp
+	Source/Polyhedron/Polyhedron_preprocess.cpp
+	Source/Polyhedron/Polyhedron_shift_point.cpp
+	Source/Polyhedron/Polyhedron_size.cpp
+	Source/Polyhedron/Polyhedron_verification.cpp
+	Source/Polyhedron/SpecificPolyhedrons/Cube.cpp
+	Source/Polyhedron/SpecificPolyhedrons/CubeCutted.cpp
+	Source/Polyhedron/SpecificPolyhedrons/Prism.cpp
+	Source/Polyhedron/SpecificPolyhedrons/Pyramid.cpp
+	Source/Polyhedron/Verifier/Verifier.cpp
+	Source/Polyhedron/VertexInfo/VertexInfo.cpp
+	Source/Polyhedron/VertexInfo/VertexInfo_intersection.cpp
+	Source/Polyhedron/VertexInfo/VertexInfo_io.cpp
+	Source/Polyhedron/VertexInfo/VertexInfo_preprocess.cpp
+	Source/Recoverer/CGALSupportFunctionEstimator.cpp
+	Source/Recoverer/IpoptSupportFunctionEstimator.cpp
+	Source/Recoverer/Recoverer.cpp
+	Source/Recoverer/SupportFunctionEstimator.cpp
+	Source/Recoverer/TsnnlsSupportFunctionEstimator.cpp
+	Source/TimeMeasurer/TimeMeasurer.cpp
+	Source/TimeMeasurer/Timer.cpp
+)
+
+set (SOURCE_tests
+	Tests/buildCluster.cpp
+	Tests/dat2ply.cpp
+	Tests/experimentCGAL_convexHullDynamic.cpp
+	Tests/experimentCGAL_convexHullStatic.cpp
+	Tests/gaussStringTest.cpp
+	Tests/globalCorrection.cpp
+	Tests/GlobalCorrectionReal.cpp
+	Tests/intersectCubeCutted.cpp
+	Tests/intersectPolyhedron.cpp
+	Tests/joinFacets.cpp
+	Tests/joinFacetsMultiple.cpp
+	Tests/moveVertexGetStatistics.cpp
+	Tests/moveVertexLinear2.cpp
+	Tests/moveVertexW.cpp
+	Tests/printTemplatePolyhedrons.cpp
+	Tests/Recoverer_test.cpp
+	Tests/ShadowContourCluterizer_test.cpp
+	Tests/shadowContoursConstruction.cpp
+)
+
+set (INCLUDE_DIRS_all
+	${CMAKE_SOURCE_DIR}/Source
+	${CMAKE_SOURCE_DIR}/External/ArrayOperations
+	${CMAKE_SOURCE_DIR}/External/GaussString
+	${CMAKE_SOURCE_DIR}/External/LSM
+	${CMAKE_SOURCE_DIR}/External/Vector3d
+	/usr/include/eigen3
+)
 
 # Common compiler flags used for build:
 set(COMMON_FLAGS "")
@@ -63,12 +172,12 @@ option(ENABLE_IPOPT "Enable Ipopt solver" OFF)
 option(ENABLE_GRAPH_DUMPER "Enable LibGEXF-based graph dumper" OFF)
 
 target_link_libraries(pcl 
-   arrayOperations 
-   gaussString 
-   lsm 
-   vector3d
-   CGAL
-   gmp
+	arrayOperations
+	gaussString
+	lsm
+	vector3d
+	CGAL
+	gmp
 )
 
 if (ENABLE_TSNNLS)
@@ -113,6 +222,24 @@ if ("${CMAKE_BUILD_TYPE}" STREQUAL "Valgrind")
 		message("   ${souce_file}")
 		set_source_files_properties(${souce_file} PROPERTIES COMPILE_FLAGS -UNDEBUG)
 	endforeach()
+endif ()
+
+if ("${CMAKE_BUILD_TYPE}" STREQUAL "Gtest")
+	add_definitions(-DGTEST_BUILD)
+elseif ("${CMAKE_BUILD_TYPE}" STREQUAL "GtestDebug")
+	set(CMAKE_BUILD_TYPE "Gtest")
+endif ()
+
+if ("${CMAKE_BUILD_TYPE}" STREQUAL "Gtest")
+	set(CMAKE_BUILD_TYPE "Debug")
+	set(COMMON_FLAGS "${COMMON_FLAGS} -g")
+	set (SOURCE_gtests
+		Source/DataConstructors/SupportFunctionDataConstructor/SupportFunctionDataItemExtractorByPlane_test.cpp
+		UnitTests/AllGtestsDriver.cpp
+	)
+	add_executable(gtests ${SOURCE_gtests})
+	target_link_libraries(pcl gtest)
+	target_link_libraries(gtests pcl)
 endif ()
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COMMON_FLAGS}")
