[BUILDFIX] cmake: add sf-data unit tests to the file list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -234,6 +234,7 @@ if ("${CMAKE_BUILD_TYPE}" STREQUAL "Gtest")
 	set(CMAKE_BUILD_TYPE "Debug")
 	set(COMMON_FLAGS "${COMMON_FLAGS} -g")
 	set (SOURCE_gtests
+		Source/DataContainers/SupportFunctionData/SupportFunctionData_test.cpp
 		Source/DataConstructors/SupportFunctionDataConstructor/SupportFunctionDataItemExtractorByPlane_test.cpp
 		Source/DataConstructors/SupportFunctionDataConstructor/SupportFunctionDataItemExtractorByPoints_test.cpp
 		Source/DataConstructors/SupportFunctionDataConstructor/SupportFunctionDataConstructor_test.cpp
