[BUILDFIX] cmake: add new include directory External/CGAL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,6 +144,7 @@ set (INCLUDE_DIRS_all
 	${CMAKE_SOURCE_DIR}/External/GaussString
 	${CMAKE_SOURCE_DIR}/External/LSM
 	${CMAKE_SOURCE_DIR}/External/Vector3d
+	${CMAKE_SOURCE_DIR}/External/CGAL
 	/usr/include/eigen3
 )
 
