--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,7 @@ set (SOURCE_pcl
 	Source/Polyhedron/VertexInfo/VertexInfo_intersection.cpp
 	Source/Polyhedron/VertexInfo/VertexInfo_io.cpp
 	Source/Polyhedron/VertexInfo/VertexInfo_preprocess.cpp
-	Source/PolyhedronCGAL.cpp
+	Source/Polyhedron_3/Polyhedron_3.cpp
 	Source/Recoverer/CGALSupportFunctionEstimator.cpp
 	Source/Recoverer/IpoptSupportFunctionEstimator.cpp
 	Source/Recoverer/GlpkSupportFunctionEstimator.cpp
