[BUILDFIX] cmake: add clp-sfe to list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,7 @@ set (SOURCE_pcl
 	Source/Polyhedron/VertexInfo/VertexInfo_io.cpp
 	Source/Polyhedron/VertexInfo/VertexInfo_preprocess.cpp
 	Source/Polyhedron_3/Polyhedron_3.cpp
+	Source/Recoverer/ClpSupportFunctionEstimator.cpp
 	Source/Recoverer/CGALSupportFunctionEstimator.cpp
 	Source/Recoverer/IpoptSupportFunctionEstimator.cpp
 	Source/Recoverer/GlpkSupportFunctionEstimator.cpp
@@ -211,6 +212,12 @@ if (ENABLE_GLPK)
 	target_link_libraries(pcl glpk)
 	add_definitions(-DUSE_GLPK)
 	message("!!! Glpk solver is enabled !!!")
+endif()
+
+if (ENABLE_CLP)
+	target_link_libraries(pcl Clp)
+	add_definitions(-DUSE_CLP)
+	message("!!! Clp solver is enabled !!!")
 endif()
 
 if (ENABLE_GRAPH_DUMPER)
