[DOC] cmake: add lomonosov2015 build script
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/CMakeLists.txt
+++ b/Documentation/i.palachev/Thesis/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(ReportAboutReconstruction)
 add_subdirectory(ReportAboutOptimization)
 add_subdirectory(TechnicalReport)
+add_subdirectory(Lomonosov2015)
