[DOC] cmake: add Article to build script
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/CMakeLists.txt
+++ b/Documentation/i.palachev/Thesis/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(ReportAboutReconstruction)
 add_subdirectory(ReportAboutOptimization)
 add_subdirectory(TechnicalReport)
 add_subdirectory(Lomonosov2015)
+add_subdirectory(Article)
