--- a/Documentation/i.palachev/Thesis/Article/CMakeLists.txt
+++ b/Documentation/i.palachev/Thesis/Article/CMakeLists.txt
@@ -4,7 +4,7 @@ include(UseLATEX)
 
 ADD_LATEX_DOCUMENT(PalachevSupportMethods.tex
     IMAGE_DIRS images
-    BIBFILES 307167.bib 81035.bib josaa-9-10-1693.bib
+    BIBFILES 307167.bib 81035.bib josaa-9-10-1693.bib 234054.bib 10.10022Fima.10007.bib 906585citation.bib 4586384.bib
     DEFAULT_PDF
     MANGLE_TARGET_NAMES
 )
