[BUILDFIX] cmake: add ipopt-fpf to list
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,7 @@ set (SOURCE_pcl
 	Source/Recoverer/CPLEXSupportFunctionEstimator.cpp
 	Source/Recoverer/CGALSupportFunctionEstimator.cpp
 	Source/Recoverer/IpoptSupportFunctionEstimator.cpp
+	Source/Recoverer/IpoptFinitePlanesFitter.cpp
 	Source/Recoverer/GlpkSupportFunctionEstimator.cpp
 	Source/Recoverer/GlpkSFELinearProgramBuilder.cpp
 	Source/Recoverer/NativeSupportFunctionEstimator.cpp
@@ -155,6 +156,10 @@ set (INCLUDE_DIRS_all
 	${CMAKE_SOURCE_DIR}/External/Vector3d
 	${CMAKE_SOURCE_DIR}/External/CGAL
 	/usr/local/include/eigen3
+	/home/ilya/git/opensource/Ipopt-3.12.1/Ipopt/src/Algorithm
+	/home/ilya/git/opensource/Ipopt-3.12.1/Ipopt/src/Common
+	/home/ilya/git/opensource/Ipopt-3.12.1/Ipopt/src/LinAlg
+	/home/ilya/git/opensource/Ipopt-3.12.1/Ipopt/src/Interfaces
 )
 
 # Common compiler flags used for build:
@@ -208,6 +213,7 @@ if (ENABLE_IPOPT)
 	target_link_libraries(pcl dl ipopt coinmumps coinhsl blas lapack)
 	add_definitions(-DUSE_IPOPT)
 	add_definitions(-DHAVE_CSTDDEF)
+	add_definitions(-DFORTRAN_INTEGER_TYPE=int)
 	message("!!! Ipopt solver is enabled !!!")
 endif()
 
