[IMPL] tp-info: move to separate source file
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,7 @@ set (SOURCE_pcl
 	Source/Recoverer/NativeSupportFunctionEstimator.cpp
 	Source/Recoverer/Recoverer.cpp
 	Source/Recoverer/SupportFunctionEstimator.cpp
+	Source/Recoverer/TangientPointInformation.cpp
 	Source/Recoverer/TsnnlsSupportFunctionEstimator.cpp
 	Source/SparseMatrixEigen.cpp
 	Source/TimeMeasurer/TimeMeasurer.cpp
