[BUILDFIX] article2: added new latex document
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/Documentation/i.palachev/Thesis/CMakeLists.txt
+++ b/Documentation/i.palachev/Thesis/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(ReportAboutOptimization)
 add_subdirectory(TechnicalReport)
 add_subdirectory(Lomonosov2015)
 add_subdirectory(Article)
+add_subdirectory(Article2)
