[IMPL] facet-corrector: added cutted pyramid construction
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,6 +147,7 @@ set (SOURCE_tests
 	Tests/moveVertexGetStatistics.cpp
 	Tests/moveVertexLinear2.cpp
 	Tests/moveVertexW.cpp
+	Tests/polyhedron_prog_incr_builder.cpp
 	Tests/printTemplatePolyhedrons.cpp
 	Tests/Recoverer_test.cpp
 	Tests/ShadowContourCluterizer_test.cpp
