[IMPL] sp-2d-joiner: begin implementation
Signed-off-by: Ilya Palachev <iliyapalachev@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,6 +151,7 @@ set (SOURCE_tests
 	Tests/Recoverer_test.cpp
 	Tests/ShadowContourCluterizer_test.cpp
 	Tests/shadowContoursConstruction.cpp
+	Tests/supportPlanes2DJoiner.cpp
 )
 
 set (INCLUDE_DIRS_all
