--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,7 @@ set (SOURCE_pcl
 	Source/Recoverer/CPLEXSupportFunctionEstimator.cpp
 	Source/Recoverer/CGALSupportFunctionEstimator.cpp
 	Source/Recoverer/EdgeCorrector.cpp
+	Source/Recoverer/FixedTopology.cpp
 	Source/Recoverer/IpoptSupportFunctionEstimator.cpp
 	Source/Recoverer/IpoptFinitePlanesFitter.cpp
 	Source/Recoverer/GlpkSupportFunctionEstimator.cpp
